--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,10 @@ scipy==0.19.1
 tensorflow==1.1.0
 Jinja2==2.10
 scikit-image==0.13.0
-scikit-learn==0.19.0
 h5py==2.7.0
+certifi==2017.7.27.1
+click==6.7
+itsdangerous==0.24
+MarkupSafe==1.0
+Werkzeug==0.12.2
+Pillow==4.2.1
